--- a/package.json
+++ b/package.json
@@ -6,22 +6,22 @@
         "npm": "8.1.0"
     },
     "scripts": {
-      "client": "cd client && npm start",
-      "server": "nodemon server.js",
-      "build": "cd client && npm run build",
-      "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
-      "start": "node server.js",
-      "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+        "client": "cd client && npm start",
+        "server": "nodemon server.js",
+        "build": "cd client && npm run build",
+        "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+        "start": "node server.js",
+        "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
     },
     "dependencies": {
-      "body-parser": "^1.18.3",
-      "compression": "1.7.4",
-      "cors": "2.8.5",
-      "dotenv": "7.0.0",
-      "express": "^4.16.4",
-      "stripe": "6.28.0"
+        "body-parser": "^1.18.3",
+        "compression": "^1.7.4",
+        "cors": "2.8.5",
+        "dotenv": "7.0.0",
+        "express": "^4.16.4",
+        "stripe": "6.28.0"
     },
     "devDependencies": {
-      "concurrently": "^4.0.1"
+        "concurrently": "^4.0.1"
     }
-  }
+}
